jhi-k8s/jhi-postgresql.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jhi-postgresql
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jhi-postgresql
  template:
    metadata:
      labels:
        app: jhi-postgresql
    spec:
      volumes:
        - name: data
          emptyDir: {}
      containers:
        - name: postgres
          image: postgres:14.5
          imagePullPolicy: Never
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
              subPath: postgres
          resources:
            requests:
              memory: '512Mi'
              cpu: '500m'
            limits:
              memory: '1Gi'
              cpu: '1'
---
apiVersion: v1
kind: Service
metadata:
  name: jhi-postgresql
  namespace: default
spec:
  selector:
    app: jhi-postgresql
  ports:
    - port: 5432
