jhi-k8s/jhi-service.yml
apiVersion: v1
kind: Service
metadata:
  name: jhi
  namespace: default
  labels:
    app: jhi
spec:
  selector:
    app: jhi
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 8080
