jhi-k8s/jhi-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jhi
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: jhi.default.opt.nc
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jhi
                port:
                  name: http
